--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -88,9 +88,14 @@ services:
       - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.hprovider.healthcare.com:8051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.hprovider.healthcare.com:7051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
+      - CORE_PEER_CHAINCODEADDRESS=peer0.hprovider.healthcare.com:7052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.hprovider:5984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -128,9 +133,14 @@ services:
       - CORE_PEER_ADDRESS=peer1.hprovider.healthcare.com:8051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.hprovider.healthcare.com:8051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.hprovider.healthcare.com:9051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:8051
+      - CORE_PEER_CHAINCODEADDRESS=peer1.hprovider.healthcare.com:8052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:8052
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.hprovider:6984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -148,8 +158,8 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL=http://localhost:6984/member_db
-      - COUCHDB_USER=peer1Hprovider
-      - COUCHDB_PASSWORD=adminpw
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -168,9 +178,14 @@ services:
       - CORE_PEER_ADDRESS=peer2.hprovider.healthcare.com:9051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.hprovider.healthcare.com:9051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.hprovider.healthcare.com:10051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:9051
+      - CORE_PEER_CHAINCODEADDRESS=peer2.hprovider.healthcare.com:9052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:9052
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.hprovider:7984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -188,8 +203,8 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL=http://localhost:7984/member_db
-      - COUCHDB_USER=peer2Hprovider
-      - COUCHDB_PASSWORD=adminpw
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -207,9 +222,14 @@ services:
       - CORE_PEER_ADDRESS=peer3.hprovider.healthcare.com:10051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.hprovider.healthcare.com:10051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.hprovider.healthcare.com:7051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:10051
+      - CORE_PEER_CHAINCODEADDRESS=peer3.hprovider.healthcare.com:10052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:10052
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.hprovider:8984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -227,8 +247,8 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL=http://localhost:8984/member_db
-      - COUCHDB_USER=peer3Hprovider
-      - COUCHDB_PASSWORD=adminpw
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -246,9 +266,14 @@ services:
       - CORE_PEER_ADDRESS=peer0.research.healthcare.com:11051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.research.healthcare.com:11051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.research.healthcare.com:12051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:11051
+      - CORE_PEER_CHAINCODEADDRESS=peer0.research.healthcare.com:11052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:11052
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.research:9984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -266,8 +291,8 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL=http://localhost:9984/member_db
-      - COUCHDB_USER=peer0Research
-      - COUCHDB_PASSWORD=adminpw
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -285,9 +310,14 @@ services:
       - CORE_PEER_ADDRESS=peer1.research.healthcare.com:12051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.research.healthcare.com:12051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.research.healthcare.com:13051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:12051
+      - CORE_PEER_CHAINCODEADDRESS=peer1.research.healthcare.com:12052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:12052
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.research:10984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -325,9 +355,14 @@ services:
       - CORE_PEER_ADDRESS=peer2.research.healthcare.com:13051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.research.healthcare.com:13051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.research.healthcare.com:14051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:13051
+      - CORE_PEER_CHAINCODEADDRESS=peer2.research.healthcare.com:13052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:13052
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.research:11984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -345,8 +380,8 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL=http://localhost:11984/member_db
-      - COUCHDB_USER=peer2Research
-      - COUCHDB_PASSWORD=adminpw
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
     volumes:
       - ./couchdbData/couchdb.peer2.hprovider/:/opt/couchdb/data
     ports:
@@ -364,9 +399,14 @@ services:
       - CORE_PEER_ADDRESS=peer3.research.healthcare.com:14051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.research.healthcare.com:14051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.research.healthcare.com:11051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:13051
+      - CORE_PEER_CHAINCODEADDRESS=peer0.research.healthcare.com:13052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:13052
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.research:12984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -384,8 +424,8 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL=http://localhost:12984/member_db
-      - COUCHDB_USER=peer3Research
-      - COUCHDB_PASSWORD=adminpw
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
     volumes:
       - ./couchdbData/couchdb.peer3.hprovider/:/opt/couchdb/data
     ports:
